--- a/Project_FinchControl/Project_FinchControl.csproj
+++ b/Project_FinchControl/Project_FinchControl.csproj
@@ -56,7 +56,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Data\Theme.txt" />
+    <Content Include="Data\Theme.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
